Начал работы по отказу от использования Vector

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,19 @@
+debug.modulepath=\
+    ${run.modulepath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
+file.reference.sqlite-jdbc-3.21.0.jar=/home/connie/NetBeansProjects/sqlite-jdbc-3.21.0.jar
+javac.modulepath=
+javac.processormodulepath=
+javac.test.modulepath=\
+    ${javac.modulepath}
+javadoc.html5=false
+jlink.launcher=false
+jlink.launcher.name=DiaCalcJ
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
 #Tue Aug 22 17:01:41 SAMT 2017
 manifest.custom.codebase=
 excludes=
@@ -11,6 +27,8 @@ run.classpath=\
     ${build.classes.dir}
 javadoc.nonavbar=false
 application.homepage=http\://diacalc.org
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
@@ -24,8 +42,9 @@ javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
 jnlp.mixed.code=default
-file.reference.sqlite-jdbc-3.7.2.jar=/home/connie/NetBeansProjects/sqlite-jdbc-3.7.2.jar
 build.classes.dir=${build.dir}/classes
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 javadoc.author=false
 test.src.dir=test
@@ -53,7 +72,7 @@ jar.archive.disabled=${jnlp.enabled}
 run.jvmargs=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 build.generated.dir=${build.dir}/generated
-jar.compress=true
+jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -71,7 +90,7 @@ mkdist.disabled=false
 jnlp.offline-allowed=false
 endorsed.classpath=
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.7.2.jar}
+    ${file.reference.sqlite-jdbc-3.21.0.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
