--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,9 @@
 compile.on.save=true
 do.depend=false
-do.jar=true
-javac.debug=false
+do.jar=false
+do.jlink=false
+javac.debug=true
 javadoc.preview=true
 jaxbwiz.endorsed.dirs=/usr/local/netbeans-6.8/ide12/modules/ext/jaxb/api
-user.properties.file=/home/connie/.netbeans/8.2/build.properties
+jlink.strip=false
+user.properties.file=/home/connie/snap/netbeans/common/data/12.4/build.properties
